<resources>
    <string name="app_name">BeerBuddy2</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password" />
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="vorname" />
    <string name="first_name">first name</string>
    <string name="Lastname" />
    <string name="lastname">lastname</string>
    <string name="repeat_password">repeat password</string>
    <string name="open_nav">open Navigation Drawer</string>
    <string name="Close_nav"> Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menue">Menue</string>
    <string name="profil_bearbeiten">Profil bearbeiten</string>
    <string name="message">Message</string>
    <string name="home">home</string>
    <string name="advertisement">advertisement</string>
    <string name="activities">activities</string>
    <string name="settings">settings</string>
    <string name="edit_profile">edit_profile</string>
    <string name="menu">Menu</string>
    <string name="einloggen">Einloggen</string>
    <string name="log_in">Log in</string>
    <string name="Einloggen">einloggen</string>
    <string name="registrieren">Registrieren</string>
    <string name="Message">message</string>
    <string name="Register">register</string>
    <string name="title">title</string>
    <string name="category">category</string>
    <string name="place_an_ad">Place an ad</string>
    <string name="preview">Preview</string>
    <string name="todo">TODO</string>
    <string name="hier_bild_hinzuf_gen">Hier Bild hinzufügen</string>
    <string name="search">Search</string>
    <string name="offer">Offer</string>
    <string name="Title">Title</string>
    <string name="Category">Category</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="price_type">Price Type</string>
    <string name="give_up_article">Give Up Article</string>
    <string name="my_map_api_key">AIzaSyDaOpmGfrbQogD44XBBh-WQE5kpMPgqrIc</string>
    <string name="search_here">search here...</string>
    <string name="banner_ads_id">/6499/example/banner</string>
</resources>