<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn= "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/menue_haupt_home"
            android:icon="@drawable/menue_haupt_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/menue_haupt_message"
            android:icon="@drawable/menue_haupt_message"
            android:title="@string/Message"/>

        <item
            android:id="@+id/menue_haupt_activities"
            android:icon="@drawable/menue_haupt_activities"
            android:title="@string/activities"/>

        <item
            android:id="@+id/menue_haupt_advertisement"
            android:icon="@drawable/menue_haupt_advertisement"
            android:title="@string/advertisement"/>



        <item
            android:id="@+id/menue_haupt_settings"
            android:icon="@drawable/menue_haupt_settings"
            android:title="@string/settings"/>

    </group>

</menu>