
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/login3"
    tools:context=".Register">


    <FrameLayout
        android:id="@+id/imageFrame"
        android:layout_width="366dp"
        android:layout_height="180dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="368dp"
            android:layout_height="179dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Add a picture" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/search"
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/search" />

        <RadioButton
            android:id="@+id/offer"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/offer" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:hint="@string/Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:hint="@string/Category" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="370dp"
            android:layout_height="78dp"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:hint="@string/price" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceType"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:hint="@string/price_type" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:backgroundTint="#00000F"
        android:text="@string/give_up_article" />

</LinearLayout>
